# web

./: .gitignore  README.md  docker-compose.yml  novel-website.bundle  start-lab.bat  start.sh
.github/workflows/: ci.yml
.trae/specs/online-novel-website/: checklist.md  spec.md  tasks.md
backend/: .env.example  Dockerfile  alembic.ini  novel.db  requirements.txt  test.db
backend/app/: main.py
backend/app/api/: auth.py  bookmarks.py  chapters.py  crawler.py  export.py  novels.py  search.py  system.py
backend/app/core/: config.py  middleware.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  advanced.py  chapter.py  novel.py  reading_progress.py  user.py
backend/app/schemas/: advanced.py  chapter.py  novel.py  (+1 more)
backend/tests/: conftest.py  test_archive.py  test_auth.py  test_auth_middleware.py  test_book_loader.py  test_bookmarks.py  test_cache.py  test_chapters.py  test_crawler_client.py  test_export.py  test_middleware.py  test_novels.py  test_schemas.py  test_search.py  test_search_service.py  test_security.py  test_system.py  test_validation.py
compressor/: Cargo.toml  pyproject.toml
compressor/src/: lib.rs
crawler/: Dockerfile  go.mod  go.sum  main.go
crawler/proto/: crawler.pb.go  crawler.proto  crawler_grpc.pb.go
crawler/sources/: example.json
data/: novel.db-shm  novel.db-wal
frontend/: Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts
grafana/: prometheus.yml
grafana/dashboards/: novel-platform.json
k6/: load-test.js  run-test.sh
nginx/: nginx.conf
(+31 files in other folders)
