[package]
name = "novel_compressor"
version = "0.1.0"
edition = "2021"

[lib]
name = "novel_compressor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
flate2 = "1.0"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
